--- a/TesteBC.Web/Views/Lancamento/LancamentoAlter.cshtml
+++ b/TesteBC.Web/Views/Lancamento/LancamentoAlter.cshtml
@@ -103,6 +103,8 @@
                 </select>
                 <span asp-validation-for="entidadeId" class="text-danger"></span>
             </div>
+            <br />
+            <div class="text-danger">@Model.errorMessage</div>
             <div class="form-group">
                 <input type="submit" value="Salvar" class="btn btn-primary" />
             </div>
