--- a/TesteBC.Web/Views/Lancamento/LancamentoDetail.cshtml
+++ b/TesteBC.Web/Views/Lancamento/LancamentoDetail.cshtml
@@ -9,10 +9,10 @@
 <div>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class = "col-sm-2"style="display: none">
             @Html.DisplayNameFor(model => model.idLancamento)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-10"style="display: none">
             @Html.DisplayFor(model => model.idLancamento)
         </dd>
         <dt class = "col-sm-2">
@@ -87,12 +87,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.contaCorrente)
         </dd>
-        <dt class = "col-sm-2">
+@*        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.entidadeId)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.entidadeNome)
-        </dd>
+        </dd>*@
     </dl>
 </div>
 <div>
