--- a/TesteBC.Web/Views/Lancamento/LancamentoRemove.cshtml
+++ b/TesteBC.Web/Views/Lancamento/LancamentoRemove.cshtml
@@ -12,120 +12,120 @@
     <form asp-action="LancamentoRemove">
         <input asp-for="idLancamento" class="form-control" style="display: none" />
         <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.idLancamento)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.idLancamento)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.descricao)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.descricao)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.dtVencimento)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.dtVencimento)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.dtPagamento)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.dtPagamento)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.vlLancamento)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.vlLancamento)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.vlLancamento_ptbr)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.vlLancamento_ptbr)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.vlDesconto)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.vlDesconto)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.vlDesconto_ptbr)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.vlDesconto_ptbr)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.vlJurosMora)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.vlJurosMora)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.vlJurosMora_ptbr)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.vlJurosMora_ptbr)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.vlEncargos)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.vlEncargos)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.vlEncargos_ptbr)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.vlEncargos_ptbr)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.flCredito)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.flCredito)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.codBarras)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.codBarras)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.instituicaoEmissora)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.instituicaoEmissora)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.agencia)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.agencia)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.contaCorrente)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.contaCorrente)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.entidadeId)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.entidadeId)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.entidadeNome)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.entidadeNome)
-        </dd>
+            <dt class="col-sm-2" style="display: none">
+                @Html.DisplayNameFor(model => model.idLancamento)
+            </dt>
+            <dd class="col-sm-10" style="display: none">
+                @Html.DisplayFor(model => model.idLancamento)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.descricao)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.descricao)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.dtVencimento)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.dtVencimento)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.dtPagamento)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.dtPagamento)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.vlLancamento)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.vlLancamento)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.vlLancamento_ptbr)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.vlLancamento_ptbr)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.vlDesconto)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.vlDesconto)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.vlDesconto_ptbr)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.vlDesconto_ptbr)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.vlJurosMora)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.vlJurosMora)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.vlJurosMora_ptbr)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.vlJurosMora_ptbr)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.vlEncargos)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.vlEncargos)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.vlEncargos_ptbr)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.vlEncargos_ptbr)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.flCredito)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.flCredito)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.codBarras)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.codBarras)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.instituicaoEmissora)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.instituicaoEmissora)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.agencia)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.agencia)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.contaCorrente)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.contaCorrente)
+            </dd>
+            @*              <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.entidadeId)
+                </dt>
+                <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.entidadeId)
+                </dd>
+                <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.entidadeNome)
+                </dt>
+                <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.entidadeNome)
+                </dd>*@
         </dl>
 
         <input type="submit" value="Remover" class="btn btn-danger" />
