--- a/TesteBC.Web/Views/Home/Index.cshtml
+++ b/TesteBC.Web/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Olá :)</h1>
+    <p>Dica: inicie cadastrando entidades... Elas serão necessárias para vc cadastrar os lançamentos</p>
 </div>
